# domainprops

./: .coveragerc  .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
domainprops/: domainprops.py
tests/: domainprops_test.py
