[tool.poetry]
name = "domainprops"
version = "0.2.0"
description = "Parse domain name properties."
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vikpe/domainprops"
keywords = ["domains","domain names","parse"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.3.5"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
tox = "^3.14"
tox-pyenv = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
