[tool.poetry]
name = "domainprops"
version = "0.3.0"
description = "Parse domain name properties."
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vikpe/domainprops"
keywords = ["domains","domain names","parse"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
tox = "^3.21.0"
tox-pyenv = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
